// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataSourceDetailPage should render properly if logged in as owner 1`] = `
<Pi
  header={
    <Connect(AppBar)
      activeMenuId="datasource"
    />
  }
  spinner={<Unknown />}
>
  <i
    header={
      <Unknown
        primary={
          <Unknown>
            Datasource details 
          </Unknown>
        }
      />
    }
  >
    <t
      disabled={false}
      isRequired={true}
      label="Datasource name"
      labelPlacement="top"
      onChange={[Function]}
      size="s"
      value="Engagement survey 2020"
    />
    <k />
    <OwnerFieldsTable
      fields={
        Array [
          Object {
            "grants": Array [],
            "id": "123",
            "name": "STAFF_NAME",
          },
        ]
      }
      onAddField={[Function]}
      onEditGrant={[Function]}
      onRemoveField={[Function]}
      onUpdateField={[Function]}
    />
  </i>
  <DataSourceDetailActions
    isCreating={false}
    isOwner={true}
    onClickCancel={[Function]}
    onClickDelete={[Function]}
    onClickSave={[Function]}
  />
  <_
    header={
      <h3>
        Permission
      </h3>
    }
    isShow={false}
    onClose={[Function]}
    placement="right"
  >
    <v
      className="pwapp-field-grants-table"
    />
  </_>
</Pi>
`;

exports[`DataSourceDetailPage should render properly if not datasource owner 1`] = `
<Pi
  header={
    <Connect(AppBar)
      activeMenuId="datasource"
    />
  }
  spinner={<Unknown />}
>
  <i
    header={
      <Unknown
        primary={
          <Unknown>
            Datasource details 
            <F
              color="secondary"
            >
              Collaborative
            </F>
          </Unknown>
        }
      />
    }
  >
    <t
      disabled={true}
      isRequired={true}
      label="Datasource name"
      labelPlacement="top"
      onChange={[Function]}
      size="s"
      value="Engagement survey 2020"
    />
    <k />
    <CollaboratorFieldsTable
      fields={
        Array [
          Object {
            "grants": Array [],
            "id": "123",
            "name": "STAFF_NAME",
          },
        ]
      }
    />
  </i>
  <DataSourceDetailActions
    isCreating={false}
    isOwner={false}
    onClickCancel={[Function]}
    onClickDelete={[Function]}
    onClickSave={[Function]}
  />
  <_
    header={
      <h3>
        Permission
      </h3>
    }
    isShow={false}
    onClose={[Function]}
    placement="right"
  >
    <v
      className="pwapp-field-grants-table"
    />
  </_>
</Pi>
`;

exports[`DataSourceDetailPage should render properly when grantField is given 1`] = `
<Pi
  header={
    <Connect(AppBar)
      activeMenuId="datasource"
    />
  }
  spinner={<Unknown />}
>
  <i
    header={
      <Unknown
        primary={
          <Unknown>
            Datasource details 
          </Unknown>
        }
      />
    }
  >
    <t
      disabled={false}
      isRequired={true}
      label="Datasource name"
      labelPlacement="top"
      onChange={[Function]}
      size="s"
      value="Engagement survey 2020"
    />
    <k />
    <OwnerFieldsTable
      fields={
        Array [
          Object {
            "grants": Array [],
            "id": "123",
            "name": "STAFF_NAME",
          },
        ]
      }
      onAddField={[Function]}
      onEditGrant={[Function]}
      onRemoveField={[Function]}
      onUpdateField={[Function]}
    />
  </i>
  <DataSourceDetailActions
    isCreating={false}
    isOwner={true}
    onClickCancel={[Function]}
    onClickDelete={[Function]}
    onClickSave={[Function]}
  />
  <_
    header={
      <h3>
        Permission
      </h3>
    }
    isShow={true}
    onClose={[Function]}
    placement="right"
  >
    <v
      className="pwapp-field-grants-table"
    >
      <FieldGrantsTable
        field={
          Object {
            "grants": Array [],
            "id": "123",
            "name": "STAFF_NAME",
          }
        }
        onAddGrant={[Function]}
        onRemoveGrant={[Function]}
        onUpdateGrant={[Function]}
      />
    </v>
  </_>
</Pi>
`;
